	* doc/man/nanorc.5, doc/texinfo/nano.texi: Update the docs for this.
	* prompt.c (find_statusbar_bracket_match, do_statusbar_find_bracket):
	Remove these functions and thus the ability to search for a matching
	bracket in a prompt input line.  The find_bracket function never had
	a default keybinding outside MMAIN, so is unlikely to have been used.

2014-06-25  Benno Schulenberg  <bensberg@justemail.net>
	* src/browser.c (do_browser): Allow 'firstfile' and 'lastfile' to be
	rebound to Ctrl keys -- checking meta_key is wrong, the function has
	already been determined, that is all that matters.
	* src/help.c (do_help): Same thing for 'firstline'/'lastline'.

2014-06-23  Benno Schulenberg  <bensberg@justemail.net>
	* src/nano.h, src/move.c (do_up, do_down), src/winio.c (edit_scrol):
	Rename UP_DIR and DOWN_DIR to UPWARD and DOWNWARD, for clarity.
	* src/proto.h, src/global.c, src/search.c: Rename 'no_replace_void()'
	to 'flip_replace_void()', to show what it actually does.
	* doc/man/nanorc.5, doc/texinfo/nano.texi: Update the docs for that.
	* src/global.c (strtosc): Add the bindable function 'gotodir'.
	* doc/man/nanorc.5, doc/texinfo/nano.texi: Document the bindable
	functions 'tofiles','gotodir' and 'flipnewbuffer', and correct
	the description of 'gototext' (not being about the file browser).
	* doc/syntax/nanorc.nanorc: Show Ins and Del as valid rebindable keys.
	* src/help.c (do_help): Normalize the indentation.
	* src/files.c (do_insertfile): Give audible feedback when flipping
	the new buffer to off is not allowed in view mode.

2014-06-22  Benno Schulenberg  <bensberg@justemail.net>
	* src/browser.c (parse_browser_input), src/help.c (parse_help_input):
	Remove two pointless calls of get_shortcut(), and adjust the comments.
	* src/nano.c (do_toggle): When toggling softwrap, only the edit window
	needs to be refreshed, not the entire screen.
	* src/browser.c (do_browser): Remove superfluous abortion variable,
	and place two comments better.